--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx:alpine
 
 COPY index.html /usr/share/nginx/html/index.html
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
-
