--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,8 +1,13 @@
 FROM nginx:alpine
 
+RUN apk add --no-cache gettext
+
 COPY index.html /usr/share/nginx/html/index.html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf.template
+COPY start.sh /start.sh
+
+RUN chmod +x /start.sh
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/start.sh"]
