--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,13 +1,8 @@
 FROM nginx:alpine
 
-RUN apk add --no-cache gettext
-
 COPY index.html /usr/share/nginx/html/index.html
-COPY nginx.conf /etc/nginx/nginx.conf.template
-COPY start.sh /start.sh
-
-RUN chmod +x /start.sh
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
-CMD ["/start.sh"]
+CMD ["nginx", "-g", "daemon off;"]
