--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -7,7 +7,7 @@ http {
     default_type application/octet-stream;
     
     server {
-        listen ${PORT};
+        listen 80;
         server_name _;
         
         root /usr/share/nginx/html;
