--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -7,7 +7,7 @@ http {
     default_type application/octet-stream;
 
     server {
-        listen 80;
+        listen ${PORT};
         server_name _;
 
         root /usr/share/nginx/html;
